--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
            var path = new URL(window.location);
            var liffId = path.searchParams.get('linkurl'); //พารามิเตอร์ที่ต้องการใส่ เช่นตามตัวอย่างจะใช้ linkurl
              liff.init({
-               liffId: "xxxxxxxxxxxxx" //วางLiffId ตรงนี้
+               liffId: "2005901079-pGEQQkZO" //วางLiffId ตรงนี้
              })
              .then(() => {
                if (liff.isInClient()) {
