--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
   </head>
   <body>
 <div class="container text-center mt-5">
-<img src="https://i.im.ge/2022/12/18/dnNRqa.2564-01-03-094436.png" width="150px"  alt="ครบเครื่อง เรื่องไอที">
- <h1>ครบเครื่อง เรื่องไอที...</h1>
+<img src="https://img2.pic.in.th/pic/784480ff-bf67-42a7-9165-0cdd30ebc59f.png" width="150px"  alt="สื่อการเรียนรู้กับครูธีระพล">
+ <h1>สื่อการเรียนรู้กับครูธีระพล...</h1>
   <div class="flex justify-center items-center h-screen">
     <div class="scene">
       <div class="shadow"></div>
