--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   </head>
   <body>
 <div class="container text-center mt-5">
-<img src="https://img2.pic.in.th/pic/784480ff-bf67-42a7-9165-0cdd30ebc59f.png" width="150px"  alt="สื่อการเรียนรู้กับครูธีระพล">
+<img src="https://img5.pic.in.th/file/secure-sv1/Teacher-6.gif" width="150px"  alt="สื่อการเรียนรู้กับครูธีระพล">
  <h1>สื่อการเรียนรู้กับครูธีระพล...</h1>
   <div class="flex justify-center items-center h-screen">
     <div class="scene">
