--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                 //document.getElementById("getDecodedIDToken").innerHTML = '<b>Email:</b> ' + liff.getDecodedIDToken().email;
               }).catch(err => console.error(err));
             }
-            liff.init({ liffId: "1656032875-lnegDwdo" }, () => { // เปลี่ยน LIFF ID 
+            liff.init({ liffId: "2005901079-pGEQQkZO" }, () => { // เปลี่ยน LIFF ID 
               if (liff.isLoggedIn()) {
                 runApp()
               } else {
