--- a/index.html
+++ b/index.html
@@ -1,69 +1,85 @@
-<html>
-  <head>
-    <meta charset="UTF-8" />
-    <meta
-      name="viewport"
-      content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=0,viewport-fit=cover"
-    />
-    <title>Send Flex to Openchat</title>
-   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet">
-    <script src="https://code.jquery.com/jquery-3.7.0.min.js" integrity="sha256-2Pmvv0kuTBOenSvLm6bvfBSSHrUJ+3A7x6P5Ebd07/g=" crossorigin="anonymous"></script>
-     <!-- LineSeed Fonts -->
-<link href="https://cdn.jsdelivr.net/gh/maketline/goodday/font/stylesheet.min.css" rel="stylesheet">
-  </head>
-   <link href="style.css" rel="stylesheet" type="text/css" />
-<link href="flex2html.css" rel="stylesheet" type="text/css" />
- <script src="flex2html.js"></script>
-  <body>
-    <div class="container mt-2">
-  <div class="card shadow-sm p-3 mb-5 bg-body-tertiary rounded">
-  <div class="card-body">
-      <div class="alert alert-primary" role="alert">
-       <h2 class="mt-3 text-center">ส่ง Flex Message ไปยังห้องต่างๆ</h2>
-</div>
-      <div class="text-center">
-        <button class="btn btn-danger mb-3 text-white text-center" onclick="goSimulator()">
-          ออกแบบ Flex Simulator
-        </button>
-  </div>
-  <div class="mb-3">
-  <label for="exampleFormControlInput1" class="form-label">Alt text</label>
-  <input type="text" class="form-control" maxlength="20" name="altText" id="altText"  placeholder="altText" required>
-</div>
-<div class="mb-3">
-  <label for="exampleFormControlTextarea1" class="form-label">วางJsonที่นี่</label>
- <textarea class="form-control" id="flexjson"  name="flexjson" rows="20" required>{
-          "type": "bubble",
-          "body": {
-            "type": "box",
-            "layout": "vertical",
-            "contents": [
-              {
-                "type": "text",
-                "text": "ครบเครื่อง เรื่องไอที"
-              }
-            ]
-          }
-        }</textarea>
-    <button class="btn btn-primary mt-2" id="btnsend" type="button" onclick="sendFlex()">
-        ส่งเลยตอนนี้
-        </button>
-  <button class="btn btn-primary" type="button" id="btnlad" disabled style="display:none;">
-  <span class="spinner-grow spinner-grow-sm" aria-hidden="true"></span>
-  <span role="status">กำลังส่งFlexโปรดรอ...</span>
-</button>
-          <p class="mt-5" id="myFlex" hidden></p>
-</div>
-</div>
-      </div>
-    </div>
-  </div>
-        <p class="text-center">DevelopBy.Teerapong Promwang</p>
-</div>  
+function sendFlex() {
+        var altText =  $('#altText').val()
+        var message =  $('#flexjson').val()
+        $('#myFlex').html(message)
+        //document.getElementById("myFlex").innerHTML = message;
 
-  <script src="script.js"></script>
-   <script src="https://static.line-scdn.net/liff/edge/2/sdk.js"></script>
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" ></script>
-    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-  </body>
-</html>
+        liff.init({ liffId: "2005901079-pGEQQkZO" });  //idLiff
+        // liff.id equals to liffId
+        liff.ready.then(() => {
+          liff
+            .sendMessages([
+              {
+                type: "flex",
+                altText: altText,
+                contents: JSON.parse(message),
+              },
+            ])
+            .then(() => {
+              $('#btnsend').hide()
+              $('#btnlad').show()
+              Swal.fire({
+                position: "center",
+                icon: "success",
+                title: "ส่ง Flex สำเร็จ !",
+                showConfirmButton: false,
+                timer: 1500,
+              });
+              setTimeout(function(){ liff.closeWindow(); }, 1000);
+              //console.log("message sent");
+            })
+            .catch((err) => {
+              console.log("error", err);
+            });
+        });
+      } //จบฟังก์ชั่น
+      function goSimulator() {
+        liff.openWindow({
+          url: "https://developers.line.biz/flex-simulator/",
+          external: true,
+        });
+      }
+function goSimulator() {
+        liff.openWindow({
+          url: "https://developers.line.biz/flex-simulator/",
+          external: true,
+        });
+      }
+
+function showFlex() {
+  var x = $('#flexjson').val() 
+  try {
+    $('#flex1').html("") 
+    x = JSON.parse(x)
+    console.log(x)
+    var flexdat = {}
+    flexdat["type"] = "flex";
+    flexdat["altText"] = "Flex Message";
+    flexdat["contents"] = x;
+    flex2html("flex1",flexdat);
+  }
+  catch(err){
+    //console.log(err)
+    $('#flex1').html("") 
+  }
+}
+
+function resetJson(){
+  $('#flexjson').val("") 
+  $('#flex1').html("") 
+
+}
+
+
+// รับข้อมูลที่คัดลอกจากคลิปบอร์ด
+function paste() {
+    navigator.clipboard.readText()
+        .then((text) => {
+            // นำข้อมูลที่คัดลอกมาแปะในส่วนที่คุณต้องการ
+            document.getElementById("flexjson").value = text;
+        showFlex() 
+        })
+        .catch((err) => {
+            console.error('ไม่สามารถแปะข้อมูลจากคลิปบอร์ดได้: ', err);
+        });
+}
