--- a/index.html
+++ b/index.html
@@ -1,85 +1,96 @@
-function sendFlex() {
-        var altText =  $('#altText').val()
-        var message =  $('#flexjson').val()
-        $('#myFlex').html(message)
-        //document.getElementById("myFlex").innerHTML = message;
 
-        liff.init({ liffId: "2005901079-pGEQQkZO" });  //idLiff
-        // liff.id equals to liffId
-        liff.ready.then(() => {
-          liff
-            .sendMessages([
-              {
-                type: "flex",
-                altText: altText,
-                contents: JSON.parse(message),
-              },
-            ])
-            .then(() => {
-              $('#btnsend').hide()
-              $('#btnlad').show()
-              Swal.fire({
-                position: "center",
-                icon: "success",
-                title: "ส่ง Flex สำเร็จ !",
-                showConfirmButton: false,
-                timer: 1500,
-              });
-              setTimeout(function(){ liff.closeWindow(); }, 1000);
-              //console.log("message sent");
-            })
-            .catch((err) => {
-              console.log("error", err);
-            });
-        });
-      } //จบฟังก์ชั่น
-      function goSimulator() {
-        liff.openWindow({
-          url: "https://developers.line.biz/flex-simulator/",
-          external: true,
-        });
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet">
+ <!-- LineSeed Fonts -->
+<link href="https://cdn.jsdelivr.net/gh/maketline/goodday/font/stylesheet.min.css" rel="stylesheet">
+      <link href="style.css" rel="stylesheet" type="text/css" />
+    <style type="text/css">
+      body {
+        font-family: 'line_seed_sans_th';
       }
-function goSimulator() {
-        liff.openWindow({
-          url: "https://developers.line.biz/flex-simulator/",
-          external: true,
-        });
-      }
+    </style>
+  <title>กำลังพาท่านเข้าสู่หน้าเว็บ...</title>
 
-function showFlex() {
-  var x = $('#flexjson').val() 
-  try {
-    $('#flex1').html("") 
-    x = JSON.parse(x)
-    console.log(x)
-    var flexdat = {}
-    flexdat["type"] = "flex";
-    flexdat["altText"] = "Flex Message";
-    flexdat["contents"] = x;
-    flex2html("flex1",flexdat);
-  }
-  catch(err){
-    //console.log(err)
-    $('#flex1').html("") 
-  }
-}
+  </head>
+  <body>
+<div class="container text-center mt-5">
+<img src="https://img5.pic.in.th/file/secure-sv1/Teacher-6.gif" width="150px"  alt="สื่อการเรียนรู้กับครูธี">
+ <h1>สื่อการเรียนรู้...กับครูธี</h1>
+  <div class="flex justify-center items-center h-screen">
+    <div class="scene">
+      <div class="shadow"></div>
+      <div class="jumper">
+        <div class="spinner">
+          <div class="scaler">
+            <div class="loader">
+              <div class="cuboid">
+                <div class="cuboid__side"></div>
+                <div class="cuboid__side"></div>
+                <div class="cuboid__side"></div>
+                <div class="cuboid__side"></div>
+                <div class="cuboid__side"></div>
+                <div class="cuboid__side"></div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
 
-function resetJson(){
-  $('#flexjson').val("") 
-  $('#flex1').html("") 
+    </div>
+    </div>
 
-}
+  </div>
+  <!-- <button class="btn btn-danger mt-3" id="closeButton">ปิดหน้าต่าง</button> -->
+        </div>
+    </div>
+<div class="text-center">
+
+</div>
+</div>
 
 
-// รับข้อมูลที่คัดลอกจากคลิปบอร์ด
-function paste() {
-    navigator.clipboard.readText()
-        .then((text) => {
-            // นำข้อมูลที่คัดลอกมาแปะในส่วนที่คุณต้องการ
-            document.getElementById("flexjson").value = text;
-        showFlex() 
-        })
-        .catch((err) => {
-            console.error('ไม่สามารถแปะข้อมูลจากคลิปบอร์ดได้: ', err);
-        });
-}
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <script src="https://static.line-scdn.net/liff/edge/2/sdk.js"></script>
+
+
+  <script>
+      $(document).ready(function() {
+           var path = new URL(window.location);
+           var liffId = path.searchParams.get('linkurl'); //พารามิเตอร์ที่ต้องการใส่ เช่นตามตัวอย่างจะใช้ linkurl
+             liff.init({
+               liffId: "2005901079-pGEQQkZO" //วางLiffId ตรงนี้
+             })
+             .then(() => {
+               if (liff.isInClient()) {
+                 if (liff.getOS() == "ios") {
+                   window.location.replace(""+liffId);              
+                 } else if (liff.getOS() == "android") {
+                   window.location.replace(""+liffId);
+                 }
+
+                 setTimeout(function(){ liff.closeWindow(); }, 3000); //เปลี่ยนเวลาที่ต้องการ Redirect
+               }
+             })
+             .catch((err) => {
+             });
+           });
+
+       // Check if LIFF is initialized
+     if (liff.isInClient()) {
+         // Add a click event listener to the close button
+         document.getElementById("closeButton").addEventListener("click", function() {
+             // Close the LIFF app when the button is clicked
+             liff.closeWindow();
+         });
+     } else {
+         // Handle the case when the app is not running in the LINE app
+         //console.log("This app is not running in the LINE app.");
+     }
+  </script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"></script>
+  </body>
+</html>
