--- a/sendflex2.html
+++ b/sendflex2.html
@@ -1,181 +1,137 @@
-<!DOCTYPE html>
 <html>
+  <head>
+    <meta charset="UTF-8" />
+    <meta
+      name="viewport"
+      content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=0,viewport-fit=cover"
+    />
+    <title>Send Flex to Openchat</title>
+   <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"> -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+  <link href='https://fonts.googleapis.com/css?family=Kanit|Niramit|Pattaya|Prompt|Sarabun|Sriracha|Questrial|Mitr|Mali|Itim' rel='stylesheet' type='text/css'>
+      <script src="https://kit.fontawesome.com/ad42651166.js" crossorigin="anonymous"></script>
+    
+    <script src="https://code.jquery.com/jquery-3.7.0.min.js" integrity="sha256-2Pmvv0kuTBOenSvLm6bvfBSSHrUJ+3A7x6P5Ebd07/g=" crossorigin="anonymous"></script>
 
-<head>
-  <title>ส่งโปรไฟล์เป็นflexMessage ด้วยLIFF</title>
-  <script src="https://static.line-scdn.net/liff/edge/2.1/sdk.js"></script>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-  <script>
-    let userProfile;
+  </head>
+<link href="style.css" rel="stylesheet" type="text/css" />
+<link href="flex2html.css" rel="stylesheet" type="text/css" />
 
-    function initializeLiff(myLiffId) {
-      console.log('Initializing LIFF');
-      liff.init({ liffId: myLiffId })
-        .then(() => {
-          console.log('LIFF initialized');
-          if (liff.isLoggedIn()) {
-            console.log('User is logged in');
-            liff.getProfile()
-              .then(profile => {
-                console.log('Profile retrieved', profile);
-                userProfile = profile;
-                document.getElementById('displayName').textContent = `สวัสดีคุณ:, ${profile.displayName}`;
-                document.getElementById('userId').textContent = `User ID: ${profile.userId}`;
-                document.getElementById('statusMessage').textContent = `Status Message: ${profile.statusMessage}`;
-                document.getElementById('profileImage').src = profile.pictureUrl;
-              })
-              .catch(err => {
-                console.error('Error getting profile: ', err);
-              });
-          } else {
-            console.log('User is not logged in, redirecting to login');
-            liff.login();
-          }
-        })
-        .catch(err => {
-          console.error('LIFF Initialization failed ', err);
-        });
+
+
+  <body onload="showFlex()">
+    <div class="container mt-2">
+  <div class="card ">
+  <div class="card-body">
+      <div class="alert alert-primary" role="alert">
+       <h2 class="mt-3 text-center">ส่ง Flex Message ไปยังห้องต่างๆ</h2>
+</div>
+</div>
+      <div class="text-center">
+        <button class="btn btn-danger mb-3 text-white text-center" onclick="goSimulator()">
+          ออกแบบ Flex Simulator
+        </button>
+                  </div>
+
+         <div class="card">
+  <div class="card-body">
+    <p>แสดงตัวอย่าง Flex ก่อนส่ง</p>
+          <div class="chatbox text-center">
+            <div id="flex1">
+</div>
+            
+  </div>
+  <div class="mb-3">
+  <label for="exampleFormControlInput1" class="form-label mt-4">Alt text</label>
+  <input type="text" class="form-control" maxlength="20" name="altText" id="altText"  placeholder="altText" required>
+</div>
+<div class="mb-3 mt-3">
+ <span class="badge rounded-pill bg-danger" type="button" onclick="resetJson()">ลบโค๊ด Json</span>
+  <span type="button" class="badge rounded-pill bg-primary" onclick="paste()">วาง Json</span>
+  </label>
+  <div class="accordion accordion-flush mt-4" id="accordionFlushExample">
+  <div class="accordion-item">
+    <h2 class="accordion-header" id="flush-headingOne">
+      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
+        ซ่อนแสดงJson 
+      </button>
+    </h2>
+    <div id="flush-collapseOne" class="accordion-collapse collapse" aria-labelledby="flush-headingOne" data-bs-parent="#accordionFlushExample">
+      <div class="accordion-body"><textarea class="form-control" id="flexjson"  name="flexjson" rows="20" required onchange="showFlex()" readonly>{
+  "type": "bubble",
+  "hero": {
+    "type": "image",
+    "url": "https://krubeecomsw.files.wordpress.com/2020/05/unnamed-3.jpg?w=512",
+    "size": "full",
+    "aspectRatio": "20:13",
+    "aspectMode": "cover",
+    "action": {
+      "type": "uri",
+      "uri": "http://linecorp.com/"
     }
-
-    function sendMessage() {
-      if (!liff.isInClient()) {
-        alert('This function is only available in the LINE app.');
-        return;
+  },
+  "body": {
+    "type": "box",
+    "layout": "vertical",
+    "contents": [
+      {
+        "type": "text",
+        "text": "ทดสอบส่ง Flex ",
+        "weight": "bold",
+        "size": "xl",
+        "align": "center"
       }
-      if (userProfile) {
-        const flexMessage = {
-          type: "flex",
-          altText: "User Profile",
-          contents: {
-            type: "bubble",
-            hero: {
-              type: "image",
-              url: userProfile.pictureUrl,
-              size: "full",
-              aspectRatio: "1:1",
-              aspectMode: "cover",
-            },
-            body: {
-              type: "box",
-              layout: "vertical",
-              contents: [
-                {
-                  type: "text",
-                  text: userProfile.displayName,
-                  weight: "bold",
-                  size: "xl"
-                },
-                {
-                  type: "text",
-                  text: `User ID: ${userProfile.userId}`,
-                  size: "sm",
-                  color: "#999999"
-                },
-                {
-                  type: "text",
-                  text: `Status Message: ${userProfile.statusMessage}`,
-                  size: "sm",
-                  color: "#999999",
-                  wrap: true
-                }
-              ]
-            }
-          }
-        };
-
-        liff.sendMessages([flexMessage])
-          .then(() => {
-            alert('Profile sent!');
-          })
-          .catch((error) => {
-            console.error('Error sending message: ', error);
-            alert('Error sending message: ' + error);
-          });
+    ]
+  },
+  "footer": {
+    "type": "box",
+    "layout": "vertical",
+    "spacing": "sm",
+    "contents": [
+      {
+        "type": "button",
+        "style": "primary",
+        "height": "sm",
+        "action": {
+          "type": "uri",
+          "label": "ส่ง Flex",
+          "uri": "https://line.me/R/app/1661515542-7JAnYE4d"
+        }
+      },
+      {
+        "type": "box",
+        "layout": "vertical",
+        "contents": [],
+        "margin": "sm"
       }
-    }
-
-     function shareMessage() {
-      if (userProfile) {
-        const flexMessage = {
-          type: "flex",
-          altText: "User Profile",
-          contents: {
-            type: "bubble",
-            hero: {
-              type: "image",
-              url: userProfile.pictureUrl,
-              size: "full",
-              aspectRatio: "1:1",
-              aspectMode: "cover",
-            },
-            body: {
-              type: "box",
-              layout: "vertical",
-              contents: [
-                {
-                  type: "text",
-                  text: userProfile.displayName,
-                  weight: "bold",
-                  size: "xl"
-                },
-                {
-                  type: "text",
-                  text: `User ID: ${userProfile.userId}`,
-                  size: "sm",
-                  color: "#999999"
-                },
-                {
-                  type: "text",
-                  text: `Status Message: ${userProfile.statusMessage}`,
-                  size: "sm",
-                  color: "#999999",
-                  wrap: true
-                }
-              ]
-            }
-          }
-        };
-
-        liff.shareTargetPicker([flexMessage])
-          .then((res) => {
-            if (res) {
-              alert('Profile shared!');
-            } else {
-              alert('Share target picker was closed.');
-            }
-          })
-          .catch((error) => {
-            console.error('Error sharing message: ', error);
-            alert('Error sharing message: ' + error);
-          });
-      }
-    }
-
-
-    document.addEventListener('DOMContentLoaded', function () {
-      var myLiffId = '2005901079-pGEQQkZO'; // Replace with your LIFF ID
-      console.log('DOMContentLoaded');
-      initializeLiff(myLiffId);
-    });
-  </script>
-</head>
-
-<body>
-  <div class="container mt-4">
-    <h2 id="displayName">สวัสดีคุณ:</h2>
-    <p id="userId"></p>
-    <p id="statusMessage"></p>
-    <img id="profileImage" src="" alt="Profile Image" style="width:100px;height:100px;" />
-    <div class="mt-3">
-      <button type="button" class="btn btn-primary" onclick="sendMessage()">Send Profile</button>
-      <button type="button" class="btn btn-success" onclick="shareMessage()">Share Profile</button>
+    ],
+    "flex": 0
+  }
+}</textarea></div>
     </div>
   </div>
+ 
+    <button class="btn btn-primary mt-2" id="btnsend" type="button" onclick="sendFlex()">
+        ส่งเลยตอนนี้
+        </button>
+  <button class="btn btn-primary" type="button" id="btnlad" disabled style="display:none;">
+  <span class="spinner-grow spinner-grow-sm" aria-hidden="true"></span>
+  <span role="status">กำลังส่งFlexโปรดรอ...</span>
+</button>
+          <p class="mt-5" id="myFlex" hidden></p>
+</div>
+</div>
+      </div>
+    </div>
+  </div>
+  <p class="text-center mt-2">DevelopBy.Teerapong Promwang</p>
+</div>  
 
+<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+<script src="script.js"></script>
+<script src="flex2html.js"></script>
+<script src="https://static.line-scdn.net/liff/edge/2/sdk.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
 
-
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-</body>
-
+  </body>
 </html>
